<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BFEAE3E3">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/actionToolbarChatFragment"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/toolbar_green"
            android:minHeight="?android:attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp">

                <RelativeLayout
                    android:id="@+id/quickSellProfilePic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true">

                    <ImageView
                        android:id="@+id/quickSellChatBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/ic_back_nav"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/quick_sell_back_navigation"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:layout_toEndOf="@+id/quickSellChatBack"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_toEndOf="@+id/quickSellProfilePic">

                    <TextView
                        android:id="@+id/quickSellChatUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/quick_sell_sender_abhishek_dhiman"/>

                    <TextView
                        android:id="@+id/quickSellChatLastSeenTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:text="@string/quick_sell_sender_last_seen"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/quickSellChatAudioCall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:tint="@color/white"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_call_audio"
                    android:layout_toStartOf="@+id/quickSellAttachFiles"/>

                <ImageButton
                    android:id="@+id/quickSellAttachFiles"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:tint="@color/white"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_attach_file"
                    android:layout_toStartOf="@+id/quickSellChatMoreOptions"/>

                <ImageButton
                    android:id="@+id/quickSellChatMoreOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_more_vert"
                    app:tint="@color/white" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuickSellChatList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="4dp"
            tools:itemCount="4"
            tools:listitem="@layout/item_incoming_text_message"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionToolbarChatFragment" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btnQuickSellAudioAndTextMsg"
                android:background="@drawable/outgoing_bubble_backgrnd"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnQuickSellAudioAndTextMsg"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/btnQuickSellEmojiFace"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:srcCompat="@drawable/ic_smile_face" />

                <EditText
                    android:id="@+id/etMessageText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/btnQuickSellCamera"
                    android:layout_toEndOf="@+id/btnQuickSellEmojiFace"
                    android:background="@android:color/transparent"
                    android:hint="@string/quick_sell_hint_type_a_message"
                    android:lineSpacingExtra="2dp"
                    android:paddingStart="6dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnQuickSellCamera"
                    app:layout_constraintStart_toEndOf="@+id/btnQuickSellEmojiFace"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/btnQuickSellCamera"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="center"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:srcCompat="@drawable/ic_camera_alt" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnQuickSellAudioAndTextMsg"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@color/toolbar_green"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:srcCompat="@drawable/ic_mic" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>